finalize and icons

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -4,6 +4,7 @@
 <head>
   <title>Options</title>
   <link rel="stylesheet" href="popup.css">
+  <script src="browser-polyfill.js"></script>
 </head>
 
 <body class="mtc-options">
@@ -33,7 +34,6 @@
       <button type="submit" class="mtc-button" id="save">Save</button>
     </div>
   </form>
-
   <script src="popup.js"></script>
 </body>
 
